[gd_scene load_steps=10 format=2]

[ext_resource path="res://Sprites/tileset_entite.png" type="Texture" id=1]
[ext_resource path="res://Scripts/méchant2.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 48, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 16, 48, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 32, 48, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 48, 48, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 0, 48, 16, 16 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "attaque",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 4, 7.5 )

[node name="méchant2" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 6 )
animation = "attaque"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 0.5 )
shape = SubResource( 7 )

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 9
collision_mask = 4

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2( -9.53674e-07, 1.25625 )
scale = Vector2( 1, 5.1875 )
polygon = PoolVector2Array( 3, 0, 53, 0, 53, 1, 3, 1 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
